crates/talkbank-parser-tests/src/snapshots/talkbank_parser_tests__snapshot__long-features.snap
---
source: crates/talkbank-parser-tests/src/snapshot.rs
expression: snapshot
---
{
  "lines": [
    {
      "line_type": "header",
      "header": {
        "type": "utf8"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "begin"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "languages",
        "codes": [
          "eng"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "participants",
        "entries": [
          {
            "speaker_code": "CHI",
            "name": null,
            "role": "Child"
          },
          {
            "speaker_code": "MOT",
            "name": null,
            "role": "Mother"
          }
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "options",
        "options": [
          "CA"
        ]
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "id",
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "media",
        "filename": "long-features",
        "media_type": "audio"
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Long feature spans and nonvocal begin/end markers"
            }
          ]
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "comment",
        "content": {
          "segments": [
            {
              "type": "text",
              "text": "Constructs: long_feature, long_feature_begin, long_feature_begin_marker,"
            },
            {
              "type": "continuation"
            },
            {
              "type": "text",
              "text": "long_feature_end, long_feature_end_marker, long_feature_label,"
            },
            {
              "type": "continuation"
            },
            {
              "type": "text",
              "text": "nonvocal, nonvocal_begin, nonvocal_begin_marker, nonvocal_end,"
            },
            {
              "type": "continuation"
            },
            {
              "type": "text",
              "text": "nonvocal_end_marker, nonvocal_simple"
            }
          ]
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "long_feature_begin",
              "label": "X"
            },
            {
              "type": "word",
              "raw_text": "deal",
              "cleaned_text": "deal",
              "content": [
                {
                  "type": "text",
                  "content": "deal"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "with",
              "cleaned_text": "with",
              "content": [
                {
                  "type": "text",
                  "content": "with"
                }
              ]
            },
            {
              "type": "long_feature_end",
              "label": "X"
            },
            {
              "type": "word",
              "raw_text": "the",
              "cleaned_text": "the",
              "content": [
                {
                  "type": "text",
                  "content": "the"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "slightest",
              "cleaned_text": "slightest",
              "content": [
                {
                  "type": "text",
                  "content": "slightest"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "pressure",
              "cleaned_text": "pressure",
              "content": [
                {
                  "type": "text",
                  "content": "pressure"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "MOT",
        "content": {
          "content": [
            {
              "type": "long_feature_begin",
              "label": "PAR"
            },
            {
              "type": "word",
              "raw_text": "is",
              "cleaned_text": "is",
              "content": [
                {
                  "type": "text",
                  "content": "is"
                }
              ]
            },
            {
              "type": "nonvocal_begin",
              "label": "THUMP"
            },
            {
              "type": "event",
              "event_type": "nonvocal"
            },
            {
              "type": "word",
              "raw_text": "this",
              "cleaned_text": "this",
              "content": [
                {
                  "type": "text",
                  "content": "this"
                }
              ]
            },
            {
              "type": "event",
              "event_type": "nonvocal"
            },
            {
              "type": "long_feature_begin",
              "label": "X"
            },
            {
              "type": "word",
              "raw_text": "one",
              "cleaned_text": "one",
              "content": [
                {
                  "type": "text",
                  "content": "one"
                }
              ]
            },
            {
              "type": "long_feature_end",
              "label": "X"
            },
            {
              "type": "word",
              "raw_text": "working",
              "cleaned_text": "working",
              "content": [
                {
                  "type": "text",
                  "content": "working"
                }
              ]
            },
            {
              "type": "nonvocal_end",
              "label": "THUMP"
            },
            {
              "type": "long_feature_end",
              "label": "PAR"
            }
          ],
          "terminator": {
            "type": "question"
          }
        }
      }
    },
    {
      "line_type": "utterance",
      "main": {
        "speaker": "CHI",
        "content": {
          "content": [
            {
              "type": "nonvocal_simple",
              "label": "BANG"
            },
            {
              "type": "word",
              "raw_text": "what",
              "cleaned_text": "what",
              "content": [
                {
                  "type": "text",
                  "content": "what"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "was",
              "cleaned_text": "was",
              "content": [
                {
                  "type": "text",
                  "content": "was"
                }
              ]
            },
            {
              "type": "word",
              "raw_text": "that",
              "cleaned_text": "that",
              "content": [
                {
                  "type": "text",
                  "content": "that"
                }
              ]
            }
          ],
          "terminator": {
            "type": "period"
          }
        }
      }
    },
    {
      "line_type": "header",
      "header": {
        "type": "end"
      }
    }
  ],
  "participants": {
    "CHI": {
      "code": "CHI",
      "name": null,
      "role": "Child",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "CHI",
        "age": "3;0",
        "role": "Child"
      },
      "birth_date": null
    },
    "MOT": {
      "code": "MOT",
      "name": null,
      "role": "Mother",
      "id": {
        "language": [
          "eng"
        ],
        "corpus": "corpus",
        "speaker": "MOT",
        "role": "Mother"
      },
      "birth_date": null
    }
  },
  "languages": [
    "eng"
  ],
  "options": [
    "CA"
  ],
  "media": {
    "filename": "long-features",
    "media_type": "audio"
  }
}
